# rust-cli-tools

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
.mentat/: precommit.sh  setup.sh
archive_dirs/: Cargo.toml  product_image-archive.sh
archive_dirs/src/: main.rs
cat_xlsx/: Cargo.toml
cat_xlsx/src/: main.rs
copy_random_files/: Cargo.toml  README.md
copy_random_files/src/: main.rs
find_duplicates/src/: main.rs
find_files_in_list/: Cargo.toml
find_files_in_list/src/: main.rs
find_log_processtime/: Cargo.toml
find_log_processtime/src/: main.rs
find_longtime_files/: Cargo.toml
find_longtime_files/src/: main.rs
find_missing_files/: Cargo.toml
find_missing_files/src/: main.rs
find_missing_files2/: Cargo.toml
find_missing_files2/src/: main.rs
hit_rate_converter/: Cargo.toml
hit_rate_converter/src/: main.rs
random_pairs_of_s3file/: Cargo.toml  README.md
random_pairs_of_s3file/src/: main.rs
s3_bucket_downloader/: Cargo.toml
s3_bucket_downloader/src/: main.rs
sort_perf_log/: CLAUDE.md  Cargo.toml
sort_perf_log/src/: CLAUDE.md  main.rs
