# rust-cli-tools/Cargo.toml
[workspace]
members = [
    "copy_random_files",
    "find_missing_files",
    "find_missing_files2",
    "find_duplicates",
    "hit_rate_converter",
    "cat_xlsx",
    "find_files_in_list",
    # Add other tools here
]
resolver = "2"  # Add this line to specify resolver version 2
