# rust-cli-tools/Cargo.toml
[workspace]
members = [
    "copy_random_files",
    "find_missing_files",
    "find_missing_files2",
    "find_duplicates",
    "hit_rate_converter",
    "cat_xlsx",
    "find_files_in_list",
    "random_pairs_of_s3file",
    "find_log_processtime",
    "archive_dirs",
    "s3_bucket_downloader",
    "sort_perf_log",
    # Add other tools here
]
resolver = "2"

[workspace.dependencies]
calamine = "=0.22.0"
zip = "=0.6.4"
