[package]
name = "archive_dirs"
version = "0.1.0"
edition = "2021"


[dependencies]
glob = "0.3.1"  # For better pattern matching
walkdir = "2.4.0"  # For directory traversal
humansize = "2.1.3"  # For human-readable file sizes
indicatif = "0.17.8"  # For progress bars
log = "0.4.20"  # For logging
env_logger = "0.11.2"  # For logging configuration
chrono = "0.4.34"  # For timestamp in log filename
ring = "0.17.12"  # Explicitly specify the fixed version of ring
