[package]
name = "random_pairs_of_s3file"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.13"
aws-sdk-s3 = "1.68.0"
tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.2", features = ["derive"] }
