[package]
name = "s3_bucket_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "=1.6.1"
aws-sdk-s3 = "=1.82.0"
aws-types = "=1.3.6"
clap = { version = "=4.5.35", features = ["derive"] }
indicatif = "=0.17.11"
rayon = "=1.10.0"
tokio = { version = "=1.44.2", features = ["full"] }
calamine = "=0.22.0"
#zip = "=0.5.13"

[dev-dependencies]
anyhow = "=1.0.97"

[patch.crates-io]
zip = { version = "=0.6.4" }
